--- a/index.html
+++ b/index.html
@@ -38,6 +38,27 @@
         </span>
       </div>
     </header>
+    <main class="chats">
+      <ul class="chats__list">
+        <a href="chat.html">
+          <li class="chats__chat chat">
+            <div class="chat__column">
+              <image
+                class="chat__avatar g-avatar"
+                src="images/avatar.png"
+              ></image>
+              <div class="chat content">
+                <span class="username">Lynn</span>
+                <span class="chat_preview">Going home!</span>
+              </div>
+            </div>
+            <div class="chat__column">
+              <span class="chat__timestamp">yesterday</span>
+            </div>
+          </li>
+        </a>
+      </ul>
+    </main>
     <nav class="nav">
       <ul class="nav__nav-list">
         <li class="nav__list-items">
@@ -46,7 +67,7 @@
           </a>
         </li>
         <li class="nav__list-items">
-          <a href="index.html" class="nav__list-link">
+          <a href="chat.html" class="nav__list-link">
             <i class="fas fa-comment"></i>
           </a>
         </li>
