--- a/find.html
+++ b/find.html
@@ -31,13 +31,64 @@
           <i class="fas fa-search"></i>
         </span>
         <span class="header__icon">
-          <i class="far fa-comment"></i>
-        </span>
-        <span class="header__icon">
           <i class="fas fa-cog"></i>
         </span>
       </div>
     </header>
+    <main class="find">
+      <header class="find__header">
+        <ul class="find__header-list">
+          <li class="find__header-btn header-btn">
+            <span class="header-btn__icon">
+              <i class="fas fa-qrcode fa-3x"></i>
+            </span>
+            <span class="header-btn__title">
+              QR Code
+            </span>
+          </li>
+          <li class="find__header-btn header-btn">
+            <span class="header-btn__icon">
+              <i class="far fa-address-book fa-3x"></i>
+            </span>
+            <span class="header-btn__title">
+              Add by Contact
+            </span>
+          </li>
+          <li class="find__header-btn header-btn">
+            <span class="header-btn__icon">
+              <i class="fas fa-passport fa-3x"></i>
+            </span>
+            <span class="header-btn__title">
+              Add by ID
+            </span>
+          </li>
+          <li class="find__header-btn header-btn">
+            <span class="header-btn__icon">
+              <i class="far fa-envelope fa-3x"></i>
+            </span>
+            <span class="header-btn__title">
+              Invite
+            </span>
+          </li>
+        </ul>
+      </header>
+      <ul class="find__recommended">
+        <h5 class="find__title">Recommended Friends</h5>
+        <li class="find__friend friend">
+          <div class="friend_column">
+            <img src="images/avatar.png" class="g-avatar friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name"></span>
+            </div>
+          </div>
+          <div class="fiends__column">
+            <div class="friend__add-btn">
+              <i class="fas fa-user-plus"></i>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </main>
     <nav class="nav">
       <ul class="nav__nav-list">
         <li class="nav__list-items">
@@ -46,7 +97,7 @@
           </a>
         </li>
         <li class="nav__list-items">
-          <a href="index.html" class="nav__list-link">
+          <a href="chat.html" class="nav__list-link">
             <i class="far fa-comment"></i>
           </a>
         </li>
