--- a/friends.html
+++ b/friends.html
@@ -31,13 +31,52 @@
           <i class="fas fa-search"></i>
         </span>
         <span class="header__icon">
-          <i class="far fa-comment"></i>
-        </span>
-        <span class="header__icon">
           <i class="fas fa-cog"></i>
         </span>
       </div>
     </header>
+    <main class="friends">
+      <header class="friends__header">
+        <div class="friends__friend friend friend--lg">
+          <div class="friend_column">
+            <img src="images/avatar.png" class="g-avatar friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">Nicolas Serrano</span>
+              <span class="friend__status">nommadcoder.co</span>
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="fiends__plus">
+        <h5 class="frineds__title">Plus Friend</h5>
+        <div class="friend_column">
+          <div class="friends__friend friend">
+            <img src="images/avatar.png" class="g-avatar friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">Plus Friend</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <h5 class="frineds__title">Friends 14</h5>
+      <ul class="friends__list">
+        <li class="friends__friend friend">
+          <div class="friend_column">
+            <img src="images/avatar.png" class="g-avatar friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">Plus Friend</span>
+              <span class="friend__status">nommadcoder.co</span>
+            </div>
+          </div>
+          <div class="fiends__column">
+            <div class="friend__now-listening">
+              <span>FTISLAND FT</span>
+              <i class="fas fa-play"></i>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </main>
     <nav class="nav">
       <ul class="nav__nav-list">
         <li class="nav__list-items">
@@ -46,7 +85,7 @@
           </a>
         </li>
         <li class="nav__list-items">
-          <a href="index.html" class="nav__list-link">
+          <a href="chat.html" class="nav__list-link">
             <i class="far fa-comment"></i>
           </a>
         </li>
