--- a/find.html
+++ b/find.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" class="c" />
     <title>Find | Cocoa clone</title>
     <script
       src="https://kit.fontawesome.com/c35a2a2a46.js"
@@ -11,8 +12,9 @@
   </head>
   <body>
     <div class="status-bar">
-      <div class="ststus-bar__column"></div>
-      <span class="status-bar__clock">13:42</span>
+      <div class="ststus-bar__column">
+        <span class="status-bar__clock">13:42</span>
+      </div>
       <div class="ststus-bar__column">
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
