--- a/friends.html
+++ b/friends.html
@@ -42,8 +42,8 @@
     <main class="friends">
       <header class="friends__header">
         <div class="friends__friend friend friend--lg">
-          <div class="friend_column">
-            <img src="images/avatar.png" class="g-avatar friend__avatar" />
+          <div class="friend__column">
+            <img src="images/avatar.png" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">Nicolas Serrano</span>
               <span class="friend__status">nommadcoder.co</span>
@@ -51,28 +51,30 @@
           </div>
         </div>
       </header>
-      <div class="fiends__plus">
-        <h5 class="frineds__title">Plus Friend</h5>
-        <div class="friend_column">
-          <div class="friends__friend friend">
-            <img src="images/avatar.png" class="g-avatar friend__avatar" />
+      <div class="friends__plus">
+        <h5 class="friends__title">Plus Friend</h5>
+        <div class="friends__friend friend">
+          <div class="friend__column">
+            <img src="images/avatar.png" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">Plus Friend</span>
+              <span class="friend__status"></span>
             </div>
           </div>
         </div>
       </div>
-      <h5 class="frineds__title">Friends 14</h5>
+      <div class="friend__column"></div>
       <ul class="friends__list">
+        <h5 class="friends__title">Friends 14</h5>
         <li class="friends__friend friend">
-          <div class="friend_column">
-            <img src="images/avatar.png" class="g-avatar friend__avatar" />
+          <div class="friend__column">
+            <img src="images/avatar.png" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">Plus Friend</span>
               <span class="friend__status">nommadcoder.co</span>
             </div>
           </div>
-          <div class="fiends__column">
+          <div class="friend__column">
             <div class="friend__now-listening">
               <span>FTISLAND FT</span>
               <i class="fas fa-play"></i>
@@ -105,5 +107,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen smaller!</span>
+    </div>
   </body>
 </html>
