--- a/more.html
+++ b/more.html
@@ -45,14 +45,14 @@
     <main class="more">
       <header class="more__header">
         <div class="friends__friend friend friend--lg">
-          <div class="friend_column">
+          <div class="friend__column">
             <img src="images/avatar.png" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">Nicolas Serrano</span>
               <span class="friend__status">itnicolasme@gmail.com</span>
             </div>
           </div>
-          <div class="fiends__column">
+          <div class="friend__column">
             <i class="far fa-comment-alt fa-2x"></i>
           </div>
         </div>
@@ -125,5 +125,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen smaller!</span>
+    </div>
   </body>
 </html>
