--- a/chat.html
+++ b/chat.html
@@ -10,51 +10,69 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
-    <div class="status-bar">
-      <div class="ststus-bar__column">
-        <span class="status-bar__clock">13:42</span>
+  <body class="chats-body">
+    <div class="wrapper">
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <span class="status-bar__clock">13:42</span>
+        </div>
+        <div class="ststus-bar__column">
+          <i class="fas fa-clock"></i>
+          <i class="fas fa-volume-mute"></i>
+          <i class="fas fa-wifi"></i>
+          <i class="fas fa-user-shield"></i>
+          <span class="ststus-bar__battery-level">85%</span>
+          <i class="fas fa-battery-three-quarters"></i>
+        </div>
       </div>
-      <div class="ststus-bar__column">
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-mute"></i>
-        <i class="fas fa-wifi"></i>
-        <i class="fas fa-user-shield"></i>
-        <span class="status-bar__battery-level">85%</span>
-        <i class="fas fa-battery-three-quarters"></i>
-      </div>
+      <header class="header">
+        <div class="header__column">
+          <a href="index.html" class="header__back-btn">
+            <i class="fas fa-arrow-left"></i>
+          </a>
+          <h1 class="header__title">Best Friend</h1>
+        </div>
+        <div class="header__column">
+          <span class="header__icon">
+            <i class="fas fa-search"></i>
+          </span>
+          <span class="header__icon">
+            <i class="fas fa-bars"></i>
+          </span>
+        </div>
+      </header>
     </div>
-    <header class="header">
-      <div class="header__column">
-        <a href="index.html" class="header__back-btn">
-          <i class="fas fa-arrow-left"></i>
-        </a>
-        <h1 class="header__title">Best Friend</h1>
-      </div>
-      <div class="header__column">
-        <span class="header__icon">
-          <i class="fas fa-search"></i>
-        </span>
-        <span class="header__icon">
-          <i class="fas fa-bars"></i>
-        </span>
-      </div>
-    </header>
+
     <main class="chat">
       <ul class="chat__messages">
         <span class="chat__timestamp">Friday, January 11, 2019</span>
         <li class="incoming-message message">
-          <img src="images/avatar.png" class="g-avatar message__avatar" />
+          <img src="images/avatar.png" class="friend__avatar" />
           <div class="message__content">
-            <span class="message__author">Best Friend</span>
             <div class="message__bubble">a lot of conglats</div>
+            <div class="message__author">Best Friend</div>
           </div>
-          <span class="message__timestamp">15:19</span>
         </li>
         <li class="sending-message message">
-          <span class="message__timestamp">16:19</span>
           <div class="message__content">
             <div class="message__bubble">Thanks dude!</div>
+          </div>
+        </li>
+        <li class="incoming-message message">
+          <img src="images/avatar.png" class="friend__avatar" />
+          <div class="message__content">
+            <div class="message__bubble">
+              a lot of conglats a lot of conglats a lot of conglats a lot of
+              conglats a lot of conglats
+            </div>
+            <div class="message__author">Best Friend</div>
+          </div>
+        </li>
+        <li class="sending-message message">
+          <div class="message__content">
+            <div class="message__bubble">
+              Thanks dude! Thanks dude! Thanks dude! Thanks dude!
+            </div>
           </div>
         </li>
       </ul>
@@ -78,6 +96,9 @@
           <i class="fas fa-microphone"></i>
         </span>
       </div>
+    </div>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen smaller!</span>
     </div>
   </body>
 </html>
