--- a/find.html
+++ b/find.html
@@ -33,7 +33,7 @@
           <i class="fas fa-search"></i>
         </span>
         <span class="header__icon">
-          <i class="fas fa-cog"></i>
+          <a href="setting.html"> <i class="fas fa-cog"></i></a>
         </span>
       </div>
     </header>
@@ -77,13 +77,13 @@
       <ul class="find__recommended">
         <h5 class="find__title">Recommended Friends</h5>
         <li class="find__friend friend">
-          <div class="friend_column">
-            <img src="images/avatar.png" class="g-avatar friend__avatar" />
+          <div class="friend__column">
+            <img src="images/avatar.png" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name"></span>
             </div>
           </div>
-          <div class="fiends__column">
+          <div class="fiend__column">
             <div class="friend__add-btn">
               <i class="fas fa-user-plus"></i>
             </div>
@@ -115,5 +115,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen smaller!</span>
+    </div>
   </body>
 </html>
