--- a/index.html
+++ b/index.html
@@ -36,26 +36,27 @@
           <i class="far fa-comment"></i>
         </span>
         <span class="header__icon">
-          <i class="fas fa-cog"></i>
+          <a href="setting.html">
+            <i class="fas fa-cog"></i>
+          </a>
         </span>
       </div>
     </header>
     <main class="chats">
       <ul class="chats__list">
         <a href="chat.html">
-          <li class="chats__chat chat">
-            <div class="chat__column">
-              <image
-                class="chat__avatar g-avatar"
-                src="images/avatar.png"
-              ></image>
-              <div class="chat content">
-                <span class="username">Lynn</span>
-                <span class="chat_preview">Going home!</span>
+          <li class="chats__chat friend friend--lg">
+            <div class="friend__column">
+              <img src="images/avatar.png" class="friend__avatar" />
+              <div class="friend__content">
+                <span class="friend__name">Lynn</span>
+                <span class="friend__bottom-text">Going home!</span>
               </div>
             </div>
-            <div class="chat__column">
-              <span class="chat__timestamp">yesterday</span>
+            <div class="friend__column">
+              <div class="friend__now-listening">
+                <span class="chat__timestamp">March 8</span>
+              </div>
             </div>
           </li>
         </a>
@@ -69,7 +70,8 @@
           </a>
         </li>
         <li class="nav__list-items">
-          <a href="chat.html" class="nav__list-link">
+          <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="fas fa-comment"></i>
           </a>
         </li>
@@ -85,5 +87,9 @@
         </li>
       </ul>
     </nav>
+
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen smaller!</span>
+    </div>
   </body>
 </html>
