--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </nav>
 
     <div class="bigScreen">
-      <span class="bigScreen__text">Please make your screen smaller!</span>
+      <span class="bigScreen__text">Please make your screen smaller! :)</span>
     </div>
   </body>
 </html>
